edge/iptables.conf
# Generated by iptables-save v1.4.21 on Wed Mar 22 08:29:30 2017
*nat
:PREROUTING ACCEPT [3086138:159448764]
:INPUT ACCEPT [1569338:53813794]
:OUTPUT ACCEPT [271064:20015600]
:POSTROUTING ACCEPT [1106232:74521228]
-A PREROUTING -s 94.245.47.189/32 -i eth0 -p tcp -m tcp --dport 1337 -j DNAT --to-destination 172.16.100.100:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.16.10.1:80
-A PREROUTING -s 94.245.47.189/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.16.10.1:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5900:5920 -j DNAT --to-destination 172.16.10.1:5900-5920
-A PREROUTING -i eth0 -p tcp -m tcp --dport 1194 -j DNAT --to-destination 192.168.17.1:1194
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Mar 22 08:29:30 2017
# Generated by iptables-save v1.4.21 on Wed Mar 22 08:29:30 2017
*filter
:INPUT DROP [119068:9543609]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [23275680:40577358304]
-A INPUT -s 141.212.122.73/32 -j DROP
-A INPUT -s 45.63.11.61/32 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1337 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5900:5920 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -i tap0 -j ACCEPT
-A INPUT -i vpnbr0 -j ACCEPT
-A INPUT -s 172.16.10.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.17.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 172.16.10.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -s 192.168.17.0/24 -d 172.16.100.2/32 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -s 172.16.100.100/32 -d 172.16.10.1/32 -p tcp -m tcp --dport 443 -j LOG --log-prefix "172.16.100.100 trying to acce"
-A INPUT -s 172.16.100.100/32 -d 172.16.10.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 10.0.0.10/32 -d 172.16.100.100/32 -p tcp -m multiport --dports 80,443 -j LOG --log-prefix "#Caps->Sat:80:443#"
-A INPUT -s 10.0.0.10/32 -d 172.16.100.100/32 -p tcp -m multiport --dports 80,443,5646,5647 -j ACCEPT
-A INPUT -s 172.16.100.100/32 -d 10.0.0.10/32 -p tcp -m multiport --dports 443,9090 -j ACCEPT
-A INPUT -j LOG --log-prefix "DROPPED INPUT: "
-A FORWARD -i tap0 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A FORWARD -i eth4 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth4 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A FORWARD -d 172.16.100.2/32 -o eth1 -j ACCEPT
-A FORWARD -s 172.16.100.2/32 -i eth1 -j ACCEPT
-A FORWARD -i eth1 -o eth4 -j ACCEPT
-A FORWARD -i eth4 -o eth1 -j ACCEPT
-A FORWARD -i eth0 -o vpnbr0 -j ACCEPT
-A FORWARD -i vpnbr0 -o eth0 -j ACCEPT
-A FORWARD -i vpnbr0 -o eth1 -j ACCEPT
-A FORWARD -i vpnbr0 -o eth2 -j ACCEPT
-A FORWARD -i vpnbr0 -o eth4 -j ACCEPT
-A FORWARD -i eth1 -o vpnbr0 -j ACCEPT
-A FORWARD -i eth2 -o vpnbr0 -j ACCEPT
-A FORWARD -i eth4 -o vpnbr0 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -j ACCEPT
-A FORWARD -i eth2 -o eth1 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.16.100.100/32 -d 10.0.0.10/32 -i eth1 -o eth2 -p tcp -m multiport --dports 80,443,9090 -j ACCEPT
-A FORWARD -i eth2 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.0.0.10/32 -d 172.16.100.100/32 -i eth2 -o eth1 -p tcp -m tcp -m multiport --dports 80,443,5646,5647 -j ACCEPT
-A FORWARD -j LOG --log-prefix "DROPPED FORWARD: "
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Wed Mar 22 08:29:30 2017
